tests/paczka1/small_fuzzy/14903149.err
Error in line 2: Sd6 A894 14,7
Error in line 3: Sd6 S190 2,1
